--- a/source/pom.xml
+++ b/source/pom.xml
@@ -10,6 +10,10 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>AEM Toolbox Parent</name>
 	<description>Parent pom for AEM Toolbox module</description>
+        <url>https://github.com/Velir/AEM-Toolbox</url>
+        <scm>
+                <developerConnection>scm:git:https://github.com/Velir/AEM-Toolbox.git</developerConnection>
+        </scm>
 	<modules>
 		<module>core</module>
 		<module>ui</module>
@@ -235,7 +239,23 @@
 					<artifactId>maven-crx-plugin</artifactId>
 					<version>1.0.3</version>
 				</plugin>
+                                <plugin>
+                                    <groupId>org.apache.maven.plugins</groupId>
+                                    <artifactId>maven-release-plugin</artifactId>
+                                    <configuration>
+                                        <localCheckout>true</localCheckout>
+                                    </configuration>
+                                </plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
+        <distributionManagement>
+            <repository>
+                        <uniqueVersion>false</uniqueVersion>
+                        <id>archiva-velir-internal</id>
+                        <name>Velir Internal Archiva Repository</name>
+                        <url>http://archiva.rwjf.velir.com:8080/archiva/repository/internal</url>
+                        <layout>default</layout>
+            </repository>
+        </distributionManagement>
 </project>
