--- a/source/pom.xml
+++ b/source/pom.xml
@@ -66,10 +66,8 @@
 	<properties>
 		<project.build.jdk>1.6</project.build.jdk>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<aem.application.server>localhost</aem.application.server>
-		<aem.application.port>4502</aem.application.port>
-		<aem.admin.username>admin</aem.admin.username>
-		<aem.admin.password>admin</aem.admin.password>
+		<root.dir>${basedir}</root.dir>
+		<maven.config.dir>${root.dir}/maven-config</maven.config.dir>
 	</properties>
 
 	<dependencyManagement>
@@ -208,6 +206,17 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<groupId>com.cognifide.maven.plugins</groupId>
+					<artifactId>maven-crx-plugin</artifactId>
+					<version>1.0.3</version>
+				</plugin>
+
+				<plugin>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>2.4</version>
+				</plugin>
+
+				<plugin>
 					<groupId>org.apache.felix</groupId>
 					<artifactId>maven-bundle-plugin</artifactId>
 					<version>1.4.3</version>
@@ -244,23 +253,33 @@
 				</plugin>
 
 				<plugin>
-					<artifactId>maven-assembly-plugin</artifactId>
-					<version>2.4</version>
-				</plugin>
-
-				<plugin>
-					<groupId>com.cognifide.maven.plugins</groupId>
-					<artifactId>maven-crx-plugin</artifactId>
-					<version>1.0.3</version>
-				</plugin>
-
-				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
 					<configuration>
 						<localCheckout>true</localCheckout>
 						<autoVersionSubmodules>true</autoVersionSubmodules>
 					</configuration>
+				</plugin>
+
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>properties-maven-plugin</artifactId>
+					<version>1.0-alpha-2</version>
+					<executions>
+						<execution>
+							<phase>validate</phase>
+							<goals>
+								<goal>read-project-properties</goal>
+							</goals>
+							<configuration>
+								<files>
+									<file>${maven.config.dir}/properties/common.properties</file>
+									<file>${maven.config.dir}/properties/${serverName}.properties</file>
+								</files>
+								<quiet>true</quiet>
+							</configuration>
+						</execution>
+					</executions>
 				</plugin>
 			</plugins>
 		</pluginManagement>
