--- a/source/ui/pom.xml
+++ b/source/ui/pom.xml
@@ -15,6 +15,10 @@
 	<description>AEM Toolbox UI module</description>
 	<packaging>pom</packaging>
 
+	<properties>
+		<root.dir>${basedir}/..</root.dir>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.aem.toolbox</groupId>
@@ -32,7 +36,6 @@
 		<!-- Felix/OSGI -->
 		<!-- JCR -->
 		<!-- Web -->
-
 		<!-- Logging -->
 		<!-- Solr -->
 		<!-- Others -->
@@ -77,6 +80,11 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
