--- a/source/pom.xml
+++ b/source/pom.xml
@@ -26,7 +26,7 @@
 	<scm>
 		<connection>scm:git:git@github.com:Velir/AEM-Toolbox.git</connection>
 		<developerConnection>scm:git:git@github.com:Velir/AEM-Toolbox.git</developerConnection>
-		<tag>release</tag>
+		<tag>HEAD</tag>
 		<url>https://github.com/Velir/AEM-Toolbox</url>
 	</scm>
 
