--- a/source/core/pom.xml
+++ b/source/core/pom.xml
@@ -4,8 +4,8 @@
 
 	<parent>
 		<groupId>com.aem.toolbox</groupId>
-		<artifactId>aem-toolbox-parent</artifactId>
-		<version>1.0</version>
+		<artifactId>aem-toolbox</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.aem.toolbox</groupId>
