--- a/source/pom.xml
+++ b/source/pom.xml
@@ -3,8 +3,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.aem.toolbox</groupId>
-	<artifactId>aem-toolbox-parent</artifactId>
-	<version>1.0</version>
+	<artifactId>aem-toolbox</artifactId>
+	<version>1.0-SNAPSHOT</version>
 	<name>AEM Toolbox Parent</name>
 	<description>Parent pom for AEM Toolbox module</description>
 	<url>https://github.com/Velir/AEM-Toolbox</url>
