--- a/source/core/pom.xml
+++ b/source/core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.aem.toolbox</groupId>
 		<artifactId>aem-toolbox</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.1</version>
 	</parent>
 
 	<groupId>com.aem.toolbox</groupId>
