--- a/source/pom.xml
+++ b/source/pom.xml
@@ -97,6 +97,13 @@
 			</dependency>
 
 			<dependency>
+				<groupId>com.day.cq.dam</groupId>
+				<artifactId>cq-dam-api</artifactId>
+				<version>5.7.86</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<dependency>
 				<groupId>com.day.cq.wcm</groupId>
 				<artifactId>cq-wcm-api</artifactId>
 				<version>5.6.6</version>
