--- a/source/ui/pom.xml
+++ b/source/ui/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.aem.toolbox</groupId>
 		<artifactId>aem-toolbox</artifactId>
-		<version>1.4.3</version>
+		<version>1.4.4-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
