--- a/source/pom.xml
+++ b/source/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.aem.toolbox</groupId>
 	<artifactId>aem-toolbox</artifactId>
-	<version>1.4.8</version>
+	<version>1.4.9-SNAPSHOT</version>
 	<name>AEM Toolbox Parent</name>
 	<description>Parent pom for AEM Toolbox module</description>
 	<url>https://github.com/Velir/AEM-Toolbox</url>
